--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   
 </head>
 <body>
+    <!-- Header -->
     <header class="site-header">
         <div class="contenedor header-grid">
             <div class="logo">
@@ -20,10 +21,100 @@
 
             <div class="contenido-header">
                 <h1>Tu plataforma para publicar tus podcast</h1>
-                <a href="#" class="btn"></a>
+                <a href="#" class="boton-primario">Crear Cuenta</a>
             </div>
         </div>
     </header>
 
+    <!-- Crea tu podcast -->
+    <section class="contenedor seccion">
+        <div class="crea-grid">
+            <div class="imagen-podcast">
+                <img src="./build/img/imagen_podcast.svg" alt="imagen podcast">
+            </div>
+    
+            <div class="contenido-creapodcast">
+                <h2>Crea tu Podcast</h2>
+                <p class="texto-podcast">
+                    Nosotros lo distribuimos a las plataformas más populares como Google Podcast, Spotify, Apple Podcast y YouTube.
+                </p>
+            </div>
+    
+        </div>
+    </section>
+
+    <!-- Beneficios -->
+    <section class="beneficios seccion">
+        <div class="grid-beneficios contenedor">
+            <div class="contenido-beneficios">
+                <h2>Llega a miles y gana dinero</h2>
+                <p>Los podcast se han convertido en un medio de entretenimiento que cada día gana más seguidores, con temas variados puedes crear tu propio podcast, ser escuchada(o) por miles de personas y convertir tu pasión en un negocio.</p>
+            </div>
+
+            <div class="imagen">
+                <img src="./build/img/podcast_cover.png" alt="imagen podcast">
+            </div>
+        </div>
+    </section>
+
+    <!-- Estadisticas -->
+    <section class="estadisticas seccion contenedor">
+        <h2>Estadísticas Detalladas</h2>
+        <p>Nosotros lo distribuimos a las plataformas más populares como Google Podcast, Spotify, Apple Podcast y YouTube.</p>
+
+        <img src="./build/img/grafica.svg" alt="Grafica imagen">
+    </section>
+
+    <!-- Planes -->
+    <section class="planes seccion">
+        <div class="contenedor">
+            <h2>Planes</h2>
+            <p class="descripcion">Inicia gratis, crece tu plan cuando sea necesario</p>
+
+            <div class="nuestros-planes">
+                <div class="plan inicio">
+                    <h3>inicio</h3>
+                    <p class="precio">$2.99 Mes</p>
+
+                    <ul class="listador">
+                        <li>30 Episodios</li>
+                        <li>Estadisticas</li>
+                        <li>App para grabar</li>
+                    </ul>
+                    <a href="#" class="boton-plan">Inscribirme</a>
+                    <img src="./build/img/icono_inicio.svg" alt="imagen inicio">
+                </div> <!-- .plan -->
+
+                <div class="plan negocio">
+                    <h3>Negocio</h3>
+                    <p class="precio">$6.99 Mes</p>
+
+                    <ul class="listador">
+                        <li>Episodios Ilimitados</li>
+                        <li>Todas las plataformas</li>
+                        <li>Estadisticas</li>
+                        <li>App para grabar</li>
+                        <li>Podcast Pagados</li>
+                    </ul>
+                    <a href="#" class="boton-plan">Inscribirme</a>
+                    <img src="./build/img/icono_inicio.svg" alt="imagen inicio">
+                </div> <!-- .plan -->
+
+                <div class="plan pro">
+                    <h3>Pro</h3>
+                    <p class="precio">$4.99 Mes</p>
+
+                    <ul class="listador">
+                        <li>50 Episodios</li>
+                        <li>Todas las plataformas</li>
+                        <li>Estadisticas</li>
+                        <li>App para grabar</li>
+                    </ul>
+                    <a href="#" class="boton-plan">Inscribirme</a>
+                    <img src="./build/img/icono_inicio.svg" alt="imagen inicio">
+                </div> <!-- .plan -->
+            </div>
+        </div>
+    </section>
 </body>
 </html>
