--- a/index.html
+++ b/index.html
@@ -76,20 +76,19 @@
                     <h3>inicio</h3>
                     <p class="precio">$2.99 Mes</p>
 
-                    <ul class="listador">
+                    <ul class="listado">
                         <li>30 Episodios</li>
                         <li>Estadisticas</li>
                         <li>App para grabar</li>
                     </ul>
                     <a href="#" class="boton-plan">Inscribirme</a>
-                    <img src="./build/img/icono_inicio.svg" alt="imagen inicio">
                 </div> <!-- .plan -->
 
                 <div class="plan negocio">
                     <h3>Negocio</h3>
                     <p class="precio">$6.99 Mes</p>
 
-                    <ul class="listador">
+                    <ul class="listado">
                         <li>Episodios Ilimitados</li>
                         <li>Todas las plataformas</li>
                         <li>Estadisticas</li>
@@ -97,24 +96,50 @@
                         <li>Podcast Pagados</li>
                     </ul>
                     <a href="#" class="boton-plan">Inscribirme</a>
-                    <img src="./build/img/icono_inicio.svg" alt="imagen inicio">
                 </div> <!-- .plan -->
 
-                <div class="plan pro">
+                <div class="plan pro"> 
                     <h3>Pro</h3>
                     <p class="precio">$4.99 Mes</p>
 
-                    <ul class="listador">
+                    <ul class="listado">
                         <li>50 Episodios</li>
                         <li>Todas las plataformas</li>
                         <li>Estadisticas</li>
                         <li>App para grabar</li>
                     </ul>
                     <a href="#" class="boton-plan">Inscribirme</a>
-                    <img src="./build/img/icono_inicio.svg" alt="imagen inicio">
                 </div> <!-- .plan -->
             </div>
         </div>
     </section>
+
+    <!-- Testimoniales -->
+    <section class="contenedor seccion testimoniales">
+        <div class="imagen">
+            <picture>
+                <source srcset="./build/img/app.avif" type="image/avif">
+                <source srcset="./build/img/app.webp" type="image/webp">
+                <img loading="lazy" src="./build/img/app.jpg" width="" height="" alt= "app imagen" >
+            <picture>
+        </div>
+        
+        <div class="contenido">
+            <h2>Testimoniales</h2>
+
+            <div class="testimonial">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt reiciendis delectus voluptates libero quasi doloribus odit animi, quam necessitatibus saepe iste facere placeat possimus eveniet.</p>
+            </div>
+
+            <div class="testimonial">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt reiciendis delectus voluptates libero quasi doloribus odit animi, quam necessitatibus saepe iste facere placeat possimus eveniet.</p>
+            </div>
+
+            <div class="testimonial">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt reiciendis delectus voluptates libero quasi doloribus odit animi, quam necessitatibus saepe iste facere placeat possimus eveniet.</p>
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
