--- a/index.html
+++ b/index.html
@@ -141,5 +141,40 @@
         </div>
     </section>
 
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="contenedor footer-grid">
+            <div class="footer-widget">
+                <img loading="lazy" src="./build/img/logo.svg" class="logo" width="" height="" alt= "logo podcast fm">
+            </div>
+            <div class="footer-widget">
+                <h3>Soluciones</h3>
+                <nav>
+                    <a href="#">Soluciones</a>
+                    <a href="#">Grafícas</a>
+                    <a href="#">Distribución</a>
+                </nav>
+            </div>
+            <div class="footer-widget">
+                <h3>Soporte</h3>
+                <nav>
+                    <a href="#">Documentación</a>
+                    <a href="#">Precios</a>
+                    <a href="#">API</a>
+                </nav>
+            </div>
+            <div class="footer-widget">
+                <h3>Podcast FM</h3>
+                <nav>
+                    <a href="#">Nosotros</a>
+                    <a href="#">Blog</a>
+                    <a href="#">Clientes</a>
+                </nav>
+            </div>
+        </div>
+
+        <p class="copyright">Podcast Fm - Todos los derechos reservados.</p>
+    </footer>
+
 </body>
 </html>
